--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,17 +3,17 @@
   "name": "Compra el pan mas fresco de la ciudad",
   "icons": [
     {
-      "src": "images/cat_logo.svg",
+      "src": "images/favicon.svg",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "images/cat_logo.svg",
+      "src": "images/favicon.svg",
       "type": "image/svg",
       "sizes": "192x192"
     },
     {
-      "src": "images/cat_logo.svg",
+      "src": "images/favicon.svg",
       "type": "image/svg",
       "sizes": "512x512"
     }
